# SignalHunter

./: codemagic.yaml  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/signalhunter/: MainActivity.kt
app/src/main/java/com/example/signalhunter/ui/: CompassView.kt  RadarView.kt
app/src/main/res/layout/: activity_main.xml
